<resources>
    <string name="app_name">Jogos</string>
    <string name="entrar">Entrar</string>
    <string name="jogar">Jogar</string>
    <string name="ranking">Ranking</string>
    <string name="voltar">Voltar</string>
    <string name="pontos">Pontos:</string>
    <string name="tempo">Tempo:</string>
    <string name="recomecar">Recomeçar</string>
    <string name="sair">Sair</string>
    <string name="gameOver">Fim de Jogo!</string>
    <string name="win">Você Ganhou!!</string>

</resources>