<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#046E9E"
    tools:context=".JogoDaMemoria.Tela4x4"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="-50dp">


    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="129dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ltGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ltBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btnSair"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/sair"
                android:textColor="#FAF9F9"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/amarelo"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/recomecar"
                android:textColor="#FAF9F9"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewPts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/pontos"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#F6F6F6"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#FAFAFA"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/tempo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FDFDFD"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:text="0"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ltGame"
        android:layout_width="389dp"
        android:layout_height="642dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <include
            layout="@layout/fase_4x4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>